--- a/content/projects.json
+++ b/content/projects.json
@@ -26,7 +26,7 @@
 		"external": "https://instadog.vercel.app/",
 		"tech": ["React", "Typescript", "Rest API", "NextJS"],
 		"showInProjects": true,
-		"content": "Instagram Clone but for Dogs! Like your posts and share them with url. Instadog utilizes a random dog Api for Images and videos while text is randomly generated. "
+		"text": "Instagram Clone but for Dogs! Like your posts and share them with url. Instadog utilizes a random dog Api for Images and videos while text is randomly generated. "
 	},
 	{
 		"text": "Machine Learning Model that will predict one day into the future of a crypto currency",
