--- a/package.json
+++ b/package.json
@@ -17,31 +17,31 @@
 		"clean": "npx prettier --write ."
 	},
 	"dependencies": {
-		"@babel/core": "^7.14.5",
+		"@babel/core": "^7.16.7",
 		"animejs": "^3.2.1",
 		"gray-matter": "^4.0.3",
-		"next": "10.2.3",
-		"next-mdx-remote": "^2.1.4",
+		"next": "^12.0.7",
+		"next-mdx-remote": "^3.0.8",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-icons": "^4.1.0",
+		"react-icons": "^4.3.1",
 		"react-transition-group": "^4.4.2",
 		"scrollreveal": "^4.0.9",
 		"smooth-scroll": "^16.1.3",
-		"styled-components": "^5.3.0",
-		"typescript": "^4.3.2"
+		"styled-components": "^5.3.3"
 	},
 	"devDependencies": {
-		"@babel/preset-typescript": "^7.14.5",
-		"@types/animejs": "^3.1.3",
-		"@types/babel__core": "^7.1.14",
-		"@types/node": "^15.12.2",
-		"@types/react": "^17.0.11",
-		"@types/react-transition-group": "^4.4.0",
-		"@types/styled-components": "^5.1.10",
-		"babel-plugin-styled-components": "^1.12.0",
-		"eslint": "^7.28.0",
-		"eslint-config-galex": "^2.16.4",
-		"prettier": "^2.3.1"
+		"@babel/preset-typescript": "^7.16.7",
+		"@types/animejs": "^3.1.4",
+		"@types/babel__core": "^7.1.18",
+		"@types/node": "^17.0.8",
+		"@types/react": "^17.0.38",
+		"@types/react-transition-group": "^4.4.4",
+		"@types/styled-components": "^5.1.19",
+		"babel-plugin-styled-components": "^2.0.2",
+		"eslint": "^8.6.0",
+		"eslint-config-galex": "^3.5.5",
+		"prettier": "^2.5.1",
+		"typescript": "^4.5.4"
 	}
 }
